# function-schema

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  python-publish.yml
examples/: README.md  basic_usage.py  claude_example.py  cli_example.py  mcp_example.py  openai_example.py
function_schema/: __init__.py  cli.py  core.py  field.py  types.py  utils.py
test/: conftest.py  test_additional_field.py  test_examples.py  test_guess_type.py  test_pep_0727_doc.py  test_schema.py  test_schema_type.py
